[gd_scene load_steps=3 format=3 uid="uid://08ncmc5vqihx"]

[ext_resource type="Script" uid="uid://dgev70j6lskh7" path="res://scenes/monster_1.gd" id="1_mmj5x"]
[ext_resource type="Texture2D" uid="uid://ducbas2whjef2" path="res://icon.svg" id="2_8chg6"]

[node name="Monster1" type="Node2D"]
script = ExtResource("1_mmj5x")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_8chg6")

[node name="TeleportTimer" type="Timer" parent="."]
one_shot = true

[node name="PositionA" type="Marker2D" parent="."]
position = Vector2(408, 1)

[node name="PositionB" type="Marker2D" parent="."]
position = Vector2(722, -2)

[node name="PositionC" type="Marker2D" parent="."]
position = Vector2(1014, -1)

[connection signal="timeout" from="TeleportTimer" to="." method="_on_TeleportTimer_timeout"]
